force-app/main/default/objects/Part__c/Part__c.object-meta.xml
<CustomObject>
    <label>Part</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>