force-app/main/default/objects/Part__c/fields/Estimated_Annual_Qty__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Qty__c</fullName>
    <label>Estimated Annual Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>