force-app/main/default/objects/Part__c/fields/Freight_Standard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Freight_Standard_Cost__c</fullName>
    <label>Freight Standard Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>