force-app/main/default/objects/Part__c/fields/LPP__c.field-meta.xml
<CustomField>
    <fullName>LPP__c</fullName>
    <label>LPP/Moving Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>