force-app/main/default/objects/Part__c/fields/Material_Standard_cost__c.field-meta.xml
<CustomField>
    <fullName>Material_Standard_cost__c</fullName>
    <label>Material Standard cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>