force-app/main/default/objects/Part__c/fields/Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Description__c</fullName>
    <label>Part Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>