force-app/main/default/objects/Part__c/fields/PPV_Impact_unfavarable__c.field-meta.xml
<CustomField>
    <fullName>PPV_Impact_unfavarable__c</fullName>
    <formula>( Requested_New_Unit_Price__c -  Material_Standard_cost__c ) *  Estimated_Annual_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>