force-app/main/default/objects/Part__c/fields/Price_Impact_vs_LPP__c.field-meta.xml
<CustomField>
    <fullName>Price_Impact_vs_LPP__c</fullName>
    <label>Price Impact vs LPP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>