force-app/main/default/objects/Part__c/fields/Price_Increase_Request__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Request__c</fullName>
    <label>Price Increase Request</label>
    <referenceTo>Price_Increase_Request__c</referenceTo>
    <relationshipLabel>Parts</relationshipLabel>
    <relationshipName>Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>