force-app/main/default/objects/Part__c/fields/Requested_New_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_Unit_Price__c</fullName>
    <label>Requested New Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>