force-app/main/default/objects/Part__c/fields/Standard_cost__c.field-meta.xml
<CustomField>
    <fullName>Standard_cost__c</fullName>
    <label>Total Standard cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>